# llm_zoomcamp

./: .gitignore  README.md  pyproject.toml
01-intro/: Readme.md  document_parser.py  info_retriever.py  llm.py  main.py  prompt_template.py  rag.py  rag_minsearch.py  rag_vector.py  search_engine.py
02-vector-search/: sematic_search.ipynb
0a-agents/: agentic_rag_1.0.py  agentic_rag_2.0.py  agentic_rag_func_calling.py  llm.py  minsearch_engine.py  notebook.ipynb
0a-agents/homework/: chat_assistant.py  homework.py  mcp_client_hmw.py
0a-agents/rag_agent_workshop/: agents-part2.ipynb  chat_assistant.py  chat_assistant_2.py
