[project]
name = "llm-zoomcamp-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.0.2",
    "langchain>=0.3.27",
    "minsearch>=0.0.4",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tdqm>=0.0.1",
]
