[project]
name = "llm-zoomcamp-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch==8.4.3",
    "fastembed>=0.7.1",
    "fastmcp>=2.11.1",
    "html2text>=2025.4.15",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "markdown>=3.8.2",
    "minsearch>=0.0.4",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "qdrant-client>=1.15.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tdqm>=0.0.1",
]
